add kafka redis to getusersbyids